# opslane

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODOS.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  poetry.toml  pyproject.toml  pytest.ini
backend/app/: dependencies.py  main.py  slack.py
backend/app/agents/: alert_classifier.py  base.py  confluence.py  debug_alert.py  pagerduty.py  rca.py  runbook_automation.py
backend/app/api/: auth_check.py  deps.py  main.py
backend/app/api/routes/: alerts.py
backend/app/api/routes/v1/: admin.py  (+5 more)
backend/app/core/: config.py  db.py  security.py  vector_store.py
backend/app/core/auth/: config.py
backend/app/db/: __init__.py  base.py
backend/app/db/models/: __init__.py  alert.py  base.py  document.py  integration.py  tenant.py  user.py
backend/app/integrations/: base.py  datadog.py  factory.py  sentry.py
backend/app/integrations/documents/: confluence.py  slack.py
backend/app/integrations/notifiers/: base.py  slack.py
backend/app/integrations/prediction/: llm.py  openai.py
backend/app/integrations/providers/: base.py  datadog.py  factory.py
backend/app/knowledge_base/: base.py  confluence.py
backend/app/managers/: notification_manager.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 051cea711c7d_make_provider_aggregation_key_optional_.py  0e1f3c08ecae_add_integration_model.py  2bf739e402ba_add_noisy_reason_field_to_schema.py  535bd144955c_add_an_alert_model.py  53daac222138_add_initial_migration.py  5d6082fd095f_create_initial_tables_for_.py  5f1b18d3fe73_add_document_table.py  69c871db16b8_add_additional_fields_to_alert_model.py  6deb69d230bc_add_unique_constraint_on_type.py  7f18cdbae60e_add_integration_credential_foreign_key_.py  9968344692b6_add_user_feedback_column_on_alert_table.py  a87579d39125_add_tenant_table.py  c5420fc7c295_add_user_table.py  dd0428013c18_add_initial_migrations.py  e891afc144a9_add_datadog_cycle_key_to_alerts_model.py  ee95b7939fdc_add_initial_migration_commits.py
backend/app/ml/: alert_classifier.py  utils.py  vector_store.py
backend/app/ml/chat/: __init__.py
backend/app/ml/services/: prediction.py
backend/app/ml/training/: alert_classifier.py  train_alert_classifier.py
backend/app/models/: __init__.py  alert.py
backend/app/models/providers/: datadog.py
backend/app/notifiers/: base.py  slack.py
backend/app/schemas/: alert.py  integration.py  tenant.py  user.py
backend/app/schemas/providers/: datadog.py
backend/app/scripts/: seed_data.py  seed_database.py
backend/app/services/: alert.py  integration.py  tenant.py
backend/app/slack/: bot.py  reports.py  utils.py
backend/app/slack/handlers/: action_handlers.py  command_handlers.py  event_handlers.py
backend/app/tasks/: alert.py
backend/app/telemetry/: __init__.py  events.py  posthog.py
backend/app/tools/: alerts.py  api_spec.py  code_execution.py  confluence.py  datadog.py  github.py  pagerduty.py  status_page.py
backend/app/vector_store/: base.py  pgvector.py
backend/app/vendors/: __init__.py
backend/tests/ml/services/: test_prediction.py
(+25 files in other folders)
