[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Abhishek Ray <abhishekray07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
pydantic-settings = "^2.3.0"
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
slack-sdk = "^3.29.0"
datadog-api-client = "^2.25.0"
pandas = "^2.2.2"
transformers = "^4.41.2"
torch = "^2.3.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
mlflow = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
