[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Abhishek Ray <abhishekray07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
pydantic-settings = "^2.3.0"
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
slack-sdk = "^3.29.0"
datadog-api-client = "^2.25.0"
pandas = "^2.2.2"
transformers = "^4.41.2"
torch = "^2.3.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
mlflow = "^2.14.1"
openai = "^1.35.6"
nltk = "^3.8.1"
slack-bolt = "^1.19.0"
aiohttp = "^3.9.5"
matplotlib = "^3.9.0"
ipdb = "^0.13.13"
litellm = "^1.41.23"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"
atlassian-python-api = "^3.41.14"
posthog = "^3.5.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
