[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Abhishek Ray <abhishekray07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
pydantic-settings = "^2.3.0"
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
slack-sdk = "^3.29.0"
datadog-api-client = "^2.25.0"
pandas = "^2.2.2"
transformers = "^4.41.2"
torch = "^2.3.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
mlflow = "^2.14.1"
openai = "^1.35.6"
nltk = "^3.8.1"
slack-bolt = "^1.19.0"
aiohttp = "^3.9.5"
matplotlib = "^3.9.0"
ipdb = "^0.13.13"
litellm = "^1.41.23"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
pgvector = "0.2.5"
psycopg2-binary = "^2.9.9"
atlassian-python-api = "^3.41.14"
posthog = "^3.5.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ipykernel = "^6.29.5"
langchain-openai = "^0.1.19"
langchainhub = "^0.1.20"
pygithub = "^2.3.0"
langchain-postgres = "^0.0.9"
langchain-milvus = "^0.1.4"
click = "^8.1.7"
joblib = "^1.4.2"
lxml = "^5.3.0"
tree-sitter = "^0.23.0"
pdpyras = "^5.2.0"
tiktoken = "^0.7.0"
rank-bm25 = "^0.2.2"
langchain-anthropic = "^0.1.23"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
gitpython = "^3.1.43"
langfuse = "^2.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
